// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test deep.json get a.b.c.arr.*.d 1`] = `
[
  {
    "e": {
      "arr": [
        {
          "f": true,
        },
        {
          "f": true,
        },
      ],
    },
  },
  {
    "e": {
      "arr": [
        {
          "f": false,
        },
        {
          "f": false,
        },
      ],
    },
  },
  {
    "e": {
      "arr": [
        {
          "f": false,
        },
        {
          "f": false,
        },
      ],
    },
  },
]
`;

exports[`test deep.json get a.b.c.arr.0.d 1`] = `
{
  "e": {
    "arr": [
      {
        "f": true,
      },
      {
        "f": true,
      },
    ],
  },
}
`;

exports[`test deep.json get a.b\\.c.arr.2 1`] = `
{
  "d": {
    "e": {
      "arr": [
        {
          "f": false,
        },
        {
          "f": false,
        },
      ],
    },
  },
  "y": true,
}
`;

exports[`test deep.json get a.b\\.c.arr.2 2`] = `
{
  "d": {
    "e": {
      "arr": [
        {
          "f": false,
        },
        {
          "f": false,
        },
      ],
    },
  },
  "y": true,
}
`;

exports[`test deep.json get a.b\\\\.c.arr.2 1`] = `
{
  "d": {
    "e": {
      "arr": [
        {
          "f": false,
        },
        {
          "f": false,
        },
      ],
    },
  },
  "z": true,
}
`;

exports[`test deep.json get a.b\\\\\\.c.arr.2 1`] = `
{
  "d": {
    "e": {
      "arr": [
        {
          "f": false,
        },
        {
          "f": false,
        },
      ],
    },
  },
  "w": true,
}
`;
